--- a/front/templates/user_home.html
+++ b/front/templates/user_home.html
@@ -27,20 +27,7 @@
 	
 	
 	<div id="group-box">
-		<h3>{% trans "Followed Groups" %}:</h3>
-		{% for group in joined_groups %}
-			<dl class="item-box">
-				<dt class="photo">
-					<a href="/group/{{group.key.id}}">
-						<img src="{{group.photo_url}}" class="im">
-					</a>
-				</dt>
-				<dd class="name">
-					<a href="/group/{{group.key.id}}">{{ group.title }}</a>
-					<span>({{group.members|length}})</span>
-				</dd>
-			</dl>
-		{% endfor %}
+		{% include "joined_groups_box.html" %}
 	</div>
 
 {% endblock %}
