--- a/group/templates/groupsite_display.html
+++ b/group/templates/groupsite_display.html
@@ -64,21 +64,10 @@
 			</div>
 		{% endif %}
 
-		{% if my_groups %}
+		{% if joined_groups %}
 			<div id="groups" class="grid_9 dashboard-widget">
 				
-				<h3>{% trans "You Followed Groups" %}</h3>
-				<ul>
-					{% for group in my_groups %}
-						<li>
-							<a class="group-photo" href="/group/{{group.key.id}}"><img class="is" src="{{group.photo_url}}=s32" /></a>
-							<div class="group-title">
-								<a class="group-name" href="/group/{{group.key.id}}">{{ group.title }}</a>
-								<span class="group-info">{{ group.introduction|truncatesmart:20 }}</span>
-							</div>
-						</li>
-					{% endfor %}
-				</ul>
+				{% include "joined_groups_box.html" %}
         	
 				<p class="clear"></p>
 			</div>
