--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -174,6 +174,53 @@ ul.buttom{
   margin: 0 0 0 0;
 }
 
+ul.medium-tabs{
+  border-bottom: 1px solid #EEEEEE;
+  clear: both;
+  display: block;
+  height: 30px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0 10px;
+}
+  ul.medium-tabs .medium-tab{
+    cursor: pointer;
+    float: left;
+    margin: 0;
+    padding: 0;
+    position: relative;
+  }
+  ul.medium-tabs .text-tab{
+    font-size:1.2em ;
+    font-weight:bold;
+    border: 1px solid transparent;
+  }
+  ul.medium-tabs .medium-tab.active .text-tab{
+    background: none repeat scroll 0 0 #FFFFFF;
+    border-color: #EEEEEE #EEEEEE #FFFFFF;
+    color: #333333;
+  }
+  
+
+  
+  
+a.text-tab{
+  -moz-border-radius: inherit;
+  border: 1px solid transparent;
+  cursor: pointer;
+  display: block;
+  line-height: 24px;
+  outline: medium none;
+  overflow: hidden;
+  padding: 3px 10px 2px;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #FFFFFF;
+}
+a.text-tab:hover{
+  background:transparent;
+  color:#AAA;
+}
+
 li.topic_list {
   list-style: none outside none;
   border-bottom: 1px solid #EEEEEE;
@@ -181,7 +228,7 @@ li.topic_list {
   padding-bottom: 6px;
 }
   li.topic_list:first-child{
-    border-top: 1px solid #EEEEEE;
+    border-top: 1px solid transparent !important;
   }
   
   li.topic_list:hover {
