--- a/group/templates/groupsite_master.html
+++ b/group/templates/groupsite_master.html
@@ -11,14 +11,17 @@
 {% endblock %}
 
 {% block content %}
-	<div id="group_title">
-		<h2>
-			{% if is_not_guest %}
-				{% trans "Latest Posts from the Groups You Followed" %}
-			{% else %}
-				{% trans "Latest Post" %}
-			{% endif %}
-		</h2>
+	<div id="group_title" style="padding-bottom:2px;">
+		<ul class="medium-tabs">
+			{% block all_title %}
+				<li class="medium-tab"> <a class="text-tab" href="/group/all">{% trans "All Groups" %}</a></li>
+			{% endblock %}
+			{% block follow_title %}
+				{% if is_not_guest %}
+					<li class="medium-tab"><a class="text-tab" href="/group/follow">{% trans "Followed Groups" %}</a></li>
+				{% endif %}
+			{% endblock %}
+		</ul>
 	</div>
 	{% include "topic_list.html" %}
 {% endblock %}
