Translate all groups to chinese

--- a/group/templates/groupsite_master.html
+++ b/group/templates/groupsite_master.html
@@ -14,7 +14,7 @@
 	<div id="group_title" style="padding-bottom:2px;">
 		<ul class="medium-tabs">
 			{% block all_title %}
-				<li class="medium-tab"> <a class="text-tab" href="/group/all">{% trans "All Groups" %}</a></li>
+				<li class="medium-tab"> <a class="text-tab" href="/group/all">{% trans "Post from All Groups" %}</a></li>
 			{% endblock %}
 			{% block follow_title %}
 				{% if is_not_guest %}
