--- a/group/templates/groupsite_all.html
+++ b/group/templates/groupsite_all.html
@@ -3,5 +3,5 @@
 {% load i18n %}
 
 {% block all_title %}
-	<li class="medium-tab active"><a class="text-tab" href="/group/follow">{% trans "All Groups" %}</a></li>
+	<li class="medium-tab active"><a class="text-tab" href="/group/follow">{% trans "Post from All Groups" %}</a></li>
 {% endblock %}
