hotfix for dashicha upgrading

--- a/group/templates/topic_display.html
+++ b/group/templates/topic_display.html
@@ -21,7 +21,7 @@
 			<div class="topic post" style="margin-top: 0px;">
 				<div class="topic-author-photo post-author-photo">
 					<a href="/u/{{topic.author.key.id}}">
-						<img src="{{topic.author.photo_url}}=s48">
+						<img src="{{topic.author.photo_url}}=s48" class="im">
 					</a>
 				</div>
 				<div class="topic-content post-content">
@@ -44,7 +44,7 @@
 			<li class="post" data-topic-id="{{topic.key.id}}">
 				<div class="post-author-photo">
 					<a href="/u/{{post.author.key.id}}">
-						<img src="{{post.author.photo_url}}=s48">
+						<img src="{{post.author.photo_url}}=s48" class="im">
 					</a>
 				</div>
 				<div class="post-content"> 
