--- a/group/templates/joined_groups_box.html
+++ b/group/templates/joined_groups_box.html
@@ -10,7 +10,7 @@
 		</dt>
 		<dd class="name group">
 			<a href="/group/{{group.key.id}}">{{ group.title }}</a>
-			<span>({{group.members|length}})</span>
+			<span>({{group.member_count}})</span>
 		</dd>
 	</dl>
 {% endfor %}
