--- a/group/templates/topic_list.html
+++ b/group/templates/topic_list.html
@@ -6,7 +6,7 @@
 		{% for topic in topics %}
 			<li class="topic_list" data-topic-id="{{topic.key.id}}">
 				<span class="topic_author_photo">
-					<img src="{{topic.author.photo_url}}=s48">
+					<img src="{{topic.author.photo_url}}=s48" class="im">
 				</span>
 				<span class="topic_content"> 
 					<span style="display: block; margin-bottom: 5px;">
