--- a/group/templates/group_display.html
+++ b/group/templates/group_display.html
@@ -53,7 +53,7 @@
 			{% endif %}
 		</ul>
 	</div>
-	<div id="group_member_box" class="sidebar_box" >
+	<div id="group_member_box" class="sidebar_box no-border" >
 		<h3>{% trans "Group Members" %}</h3>
 		{% for member in members %}
 			<dl class="item-box">
