--- a/home/templates/user_home.html
+++ b/home/templates/user_home.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-	<div id="user-profile" style = "margin-bottom:4em;">
+	<div id="user-profile" style = "">
 		<div class="pic" style="float:left;">
 		    <a href="http://www.douban.com/u/{{user.id}}">
 		        <img src="{{user.photo_url}}" alt="{{user.fullname}}" class="im">
@@ -22,10 +22,50 @@
 					<span id="display" class="status-message">({{ user.status_message }})</span>
 				{% endif %}
 		    </h1>
+			<div style="padding-top:10px;">
+				<form action="{{post_url}}" method="POST" accept-charset="utf-8">
+						<textarea class="stream-box-editor" style="width: 526px; height: 36px;" name="content" id="id_content" ></textarea>
+						<div style="text-align:right">
+							<span style="float:left; padding-left:14px;padding-top:4px; color:#aaa;">What's happing?</span>
+							<input type="submit" value="{% trans "Post New Stream" %}" style="margin-bottom:0px;">
+						</div>
+				</form>
+			</div>
 		</div>
 	</div>
 	
+	<ul class="medium-tabs">
+		{% block all_title %}
+			<li class="medium-tab"> <a class="text-tab" href="/group/all">{% trans "Post from All Groups" %}</a></li>
+		{% endblock %}
+		{% block follow_title %}
+			{% if is_not_guest %}
+				<li class="medium-tab"><a class="text-tab" href="/group/follow">{% trans "Followed Groups" %}</a></li>
+			{% endif %}
+		{% endblock %}
+	</ul>
 	
+	<div id="stream-box">
+		<ol class="streams">
+			{% for stream in streams %}
+				<li class="stream_list" data-stream-id="{{stream.key.id}}">
+					<span class="stream_author_photo">
+						<img src="{{stream.author.photo_url}}=s48" class="im">
+					</span>
+					<span class="stream_content"> 
+						<span style="display: block; margin-bottom: 5px;">
+							{{ stream.content }}
+						</span>
+						<span style=" color: #999999;">
+							{{ stream.create_at|date:"Y-n-j H:i" }} by {{ stream.author.fullname }}. 
+						</span>
+					</span>
+				</li>
+
+			{% endfor %}
+		</ol>
+		{% include "pager.html" %}
+	</div>
 
 
 {% endblock %}
