--- a/common/templates/master.html
+++ b/common/templates/master.html
@@ -17,7 +17,7 @@
 	<style type="text/css" media="screen">
 		body.user-style{
 /*			background-image:url("http://s.twimg.com/a/1286563368/images/themes/theme9/bg.gif");*/
-			background-color: #222;
+			background-color: #D7E0F2;
 		}
 	</style>
 	<title>{% block title %}
