Add microbloging module

--- a/common/templates/master.html
+++ b/common/templates/master.html
@@ -49,7 +49,7 @@
 									</a>
 								</li>
 								<li class="{% block ask_menu %}{% endblock %}">
-									<a href="/group/all" style="vertical-align:text-top; margin: 0px;">
+									<a href="/u" style="vertical-align:text-top; margin: 0px;">
 										<strong>{% trans "Microblog" %}</strong>
 									</a>									
 								</li>
