--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -174,6 +174,22 @@ dl.item-box {
       white-space: nowrap;
     }
 
+.item-box-min{
+  float:left; 
+  width: 78px;
+  padding-left:3px;
+  text-align: center;
+  margin-bottom:0px;
+}
+  dl.item-box-min dt.photo {
+    text-align: center;
+  }
+  dl.item-box-min dd.name {
+    text-align: center; 
+    height: 25px; 
+    margin: 0;
+  }  
+
 ul.buttom{
   margin: 0 0 0 0;
 }
@@ -470,7 +486,7 @@ a.btn-disabled {
 
 a.user-link{
   font-weight:bold;
-  color:#333!important;
+  color:#888!important;
 }
  a.user-link:hover{
    color:#336699 !important;
