Polish the frontpage

--- a/group/templates/joined_groups_box.html
+++ b/group/templates/joined_groups_box.html
@@ -2,15 +2,5 @@
 
 <h3>{% trans "Followed Groups" %}:</h3>
 {% for group in joined_groups %}
-	<dl class="item-box">
-		<dt class="photo">
-			<a href="/group/{{group.key.id}}">
-				<img src="{{group.photo_url}}" class="is">
-			</a>
-		</dt>
-		<dd class="name group">
-			<a href="/group/{{group.key.id}}">{{ group.title }}</a>
-			<span>({{group.member_count}})</span>
-		</dd>
-	</dl>
+	{% include "group_item.html" %}
 {% endfor %}
