Almost finish the polishing

--- a/home/templates/home_front_page.html
+++ b/home/templates/home_front_page.html
@@ -48,7 +48,7 @@
 	</div>
 	
 	<ul class="medium-tabs">
-		<li class="medium-tab active"> <a class="text-tab" href="/u/{{user.key.id}}/all">{% trans "All Groups" %}</a></li>
+		<li class="medium-tab active"> <a class="text-tab" href="/u/{{user.key.id}}/all">{% trans "All User Updates" %}</a></li>
 	</ul>
 	
 	
