--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -34,5 +34,20 @@
 			<p><input type="submit" value="{% trans "Login" %}"></p>
 		</form>
 	</div>
+	<div class="clear">
+		
+	</div>
+	
+	<h2 style="color:#777;">
+		{% trans "Or" %}
+	</h2>
+	
+	<div>
+		<h3>
+					<a href="/signup">
+			{% trans "Sign up a new account." %}
+		</a></h3>
+	</div>
+	
 	
 {% endblock %}
