--- a/home/templates/signup_successful.html
+++ b/home/templates/signup_successful.html
@@ -8,6 +8,17 @@
 
 {% block content %}
 
-	<p class="success">{% trans "Your account has been created successfully." %}</p>
+	<h3>{% trans "Your account has been created successfully." %}</h3>
 	 
+	<div class="clear">
+		
+	</div>
+	
+	
+	<div>
+		<h3>
+					<a href="/login">
+			{% trans "Click here to login." %}
+		</a></h3>
+	</div>
 {% endblock %}
