--- a/home/templates/member_item.html
+++ b/home/templates/member_item.html
@@ -1,7 +1,7 @@
 {% load filters %}
 	<dl class="item-box-min">
 		<dt class="photo">
-			<a href="/u/{{member.key.id}}"><img src="{{member.photo_url}}=s48"/ class="is"></a>
+			<a href="/u/{{member.key.id}}"><img src="{{member.photo_url}}=s48"/ class="im"></a>
 		</dt>
 		<dd class="name">
 			<a href="/u/{{member.key.id}}">{{ member.fullname|truncatesmart:10 }}</a>
