Translate UI to chinese

--- a/home/templates/user_home_master.html
+++ b/home/templates/user_home_master.html
@@ -29,7 +29,7 @@
 					<form action="{{post_url}}" method="POST" accept-charset="utf-8">
 							<textarea class="stream-box-editor" style="width: 526px; height: 36px;" name="content" id="id_content" ></textarea>
 							<div style="text-align:right">
-								<span style="float:left; padding-left:14px;padding-top:4px; color:#aaa;">What's happing?</span>
+								<span style="float:left; padding-left:14px;padding-top:4px; color:#aaa;">{% trans "What's happing?" %}</span>
 								<input class="a-btn" type="submit" value="{% trans "Post New Stream" %}" style="margin-bottom:0px; height:26px;">
 							</div>
 					</form>
