--- a/home/templates/home_front_page.html
+++ b/home/templates/home_front_page.html
@@ -9,7 +9,7 @@
 
 {% block left_panel %}
 	<div style="text-align:center; padding-top:20px;">
-		<h1>{% trans "Groups are on left." %}</h1>
+		<h1><font class="blue">{% trans "Groups" %}</font>{% trans " are on left." %}</h1>
 	</div>
 	
 	<div style="padding-left:20px; min-height:115px; padding-top:20px;">
@@ -33,7 +33,7 @@
 
 {% block right_panel %}
 	<div style="text-align:center; padding-top:20px;">
-		<h1>{% trans "Microblog are on right." %}</h1>
+		<h1><font class="pink">{% trans "Microblog" %}</font>{% trans "are on right." %}</h1>
 	</div>
 	
 	
