--- a/assets/css/daoshicha.css
+++ b/assets/css/daoshicha.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Helvetica Neue","Luxi Sans","DejaVu Sans",Tahoma,"Hiragino Sans GB",STHeiti !important;
+    font-family: "Helvetica Neue","Luxi Sans","DejaVu Sans",Tahoma,"Hiragino Sans GB",STHeiti, "Microsoft YaHei" !important;
 }
 
 a {
