--- a/home/templates/home_front_page.html
+++ b/home/templates/home_front_page.html
@@ -33,7 +33,7 @@
 
 {% block right_panel %}
 	<div style="text-align:center; padding-top:20px;">
-		<h1><font class="pink">{% trans "Microblog" %}</font>{% trans "are on right." %}</h1>
+		<h1><font class="blue">{% trans "Microblog" %}</font>{% trans "are on right." %}</h1>
 	</div>
 	
 	
