--- a/common/templates/master.html
+++ b/common/templates/master.html
@@ -16,8 +16,7 @@
 	
 	<style type="text/css" media="screen">
 		body.user-style{
-/*			background-image:url("http://s.twimg.com/a/1286563368/images/themes/theme9/bg.gif");*/
-			background-color: #343434;
+			background:#333 url("/images/background-main.png") no-repeat;
 		}
 	</style>
 	<title>{% block title %}
