--- a/group/templates/group_item.html
+++ b/group/templates/group_item.html
@@ -1,4 +1,4 @@
-<dl class="item-box">
+<dl class="item_box">
 	<dt class="photo">
 		<a href="/group/{{group.key.id}}">
 			<img src="{{group.photo_url}}" class="is">
