--- a/group/templates/groupsite_follow.html
+++ b/group/templates/groupsite_follow.html
@@ -3,5 +3,5 @@
 
 
 {% block follow_title %}
-	<li class="medium-tab active"><a class="text-tab" href="/group/follow">{% trans "Followed Groups" %}</a></li>
+	<li class="medium_tab active"><a class="text_tab" href="/group/follow">{% trans "Followed Groups" %}</a></li>
 {% endblock %}
