--- a/home/templates/home_front_page.html
+++ b/home/templates/home_front_page.html
@@ -23,8 +23,8 @@
 		
 	</div>
 	
-		<ul class="medium-tabs">
-			<li class="medium-tab active"> <a class="text-tab" href="/group/all">{% trans "Post from All Groups" %}</a></li>
+		<ul class="medium_tabs">
+			<li class="medium_tab active"> <a class="text_tab" href="/group/all">{% trans "Post from All Groups" %}</a></li>
 		</ul>
 	
 	{% include "topic_list.html" %}
@@ -51,8 +51,8 @@
 		
 	</div>
 	
-	<ul class="medium-tabs">
-		<li class="medium-tab active"> <a class="text-tab" href="/u/{{user.key.id}}/all">{% trans "All User Updates" %}</a></li>
+	<ul class="medium_tabs">
+		<li class="medium_tab active"> <a class="text_tab" href="/u/{{user.key.id}}/all">{% trans "All User Updates" %}</a></li>
 	</ul>
 	
 	
