--- a/group/templates/groupsite_master.html
+++ b/group/templates/groupsite_master.html
@@ -12,13 +12,13 @@
 
 {% block content %}
 	<div id="group_title" style="padding-bottom:2px;">
-		<ul class="medium-tabs">
+		<ul class="medium_tabs">
 			{% block all_title %}
-				<li class="medium-tab"> <a class="text-tab" href="/group/all">{% trans "Post from All Groups" %}</a></li>
+				<li class="medium_tab"> <a class="text_tab" href="/group/all">{% trans "Post from All Groups" %}</a></li>
 			{% endblock %}
 			{% block follow_title %}
 				{% if is_not_guest %}
-					<li class="medium-tab"><a class="text-tab" href="/group/follow">{% trans "Followed Groups" %}</a></li>
+					<li class="medium_tab"><a class="text_tab" href="/group/follow">{% trans "Followed Groups" %}</a></li>
 				{% endif %}
 			{% endblock %}
 		</ul>
