--- a/home/templates/member_item.html
+++ b/home/templates/member_item.html
@@ -1,5 +1,5 @@
 {% load filters %}
-	<dl class="item-box-min">
+	<dl class="item_box_min">
 		<dt class="photo">
 			<a href="/u/{{member.key.id}}"><img src="{{member.photo_url}}=s48"/ class="im"></a>
 		</dt>
